added some changes

--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -14,10 +14,12 @@
 .login-btn:hover{
     color: white;
 }
+.form-check{
+    float: right;
+}
 .link-fp{
     color: black;
     text-decoration: none;
-
 }
 .link-fp:hover{
     color: black;
